# totaltrackie

./: .gitattributes  LICENSE.md  README.md  pyproject.toml
src/totaltrackie/: __main__.py  core.py  persistent.py
src/totaltrackie/ui/: _utils.py  about.py  icons.py  main.py  report.py  settings.py  task.py  templates.py
